--- a/JS/fulljs(23-03-24)/index.html
+++ b/JS/fulljs(23-03-24)/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div>Hello From JS</div>
+  </body>
 
   <script src="./index.js"></script>
 </html>
