--- a/JS/core(17-03-24)/loop.html
+++ b/JS/core(17-03-24)/loop.html
@@ -13,8 +13,9 @@
     let numberDifference = Number(prompt("Enter the ending number: "));
 
     if (startingNumber > endingNumber) {
-      alert("You entered incorerect");
+      alert("You entered incorerect start>end");
     }
+
     for (let i = startingNumber; i <= endingNumber; i += numberDifference) {
       console.log(i);
     }
